# media-production-framework

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: load-project-onboarding.ps1
docs/: capabilities.md  coding-standards.md  developer-guide.md  execution-plan-m3.md  implementation-plan.md  project-structure.md  release-process.md  roadmap.md  testing.md  yaml-reference.md
docs/adr/: ADR-0001-subtitle-alignment-architecture.md  ADR-0002-render-backend-architecture.md  README.md
src/media_production_framework/: __init__.py  alignment.py  audio.py  configuration.py  domain.py  events.py  ffmpeg_backend.py  layout.py  log_config.py  lyrics.py  main.py  metadata.py  moviepy_backend.py  pipeline.py  progress_view.py  projects.py  providers.py  render_backends.py  rendering.py  subtitle_export.py  subtitle_import.py  subtitle_validation.py  subtitles.py  text_renderer.py  text_wrapping.py
src/media_production_framework/subtitles/: create_subtitles_OLD.py
templates/: Freudentränen.yaml  Naturkajal.yaml  default.yaml  karaoke.yaml  test.yaml  youtube.yaml
tests/: test_audio.py  test_ffmpeg_backend.py  test_foundation.py  test_layout.py  test_moviepy_backend.py  test_progress_view.py  test_render_pipeline.py  test_render_selection.py  test_subtitle_generation.py  test_text_renderer.py  test_video_rendering.py
